about_me.css
/* font-family: 'Dancing Script', cursive; 

{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
} */

html,
body {
  height: 100%;
}

/* Header styling */

.site-name {
  font-family: "Dancing Script", cursive;
  font-size: 40px;
  padding-top: 20px;
  color: white;
  padding-left: 20px;
  padding-bottom: 20px;
  margin: 0;
}

.site-name:hover {
  background-color: blanchedalmond;
  font-size: 30px;
  color: black;
}



/* Body styling */

body {
  background-image: url("https://wallpaperaccess.com/full/240945.jpg");
  background-repeat: no-repeat;
  position: relative;
}

.container {
  position: relative;
  width: 1191px;
}

.frame {
  width: 250px;
  height: 300px;
  position: absolute;
  top: 50px;
  left: 50px;
  border-radius: 25px;
}

.paper {
  width: 350px;
  height: 450px;
  position: relative; 
  left: 20%;
  border-radius: 30px;
}

.about_me {
  width: 315px;
  height: 300px;
  position: absolute;
  left: 20px;
  top: 23%;
  background-color: transparent;
  border: none;
  text-align: center;
  font-size: 11px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-weight: bolder;
  color: mediumvioletred;
}

.mycontainerforimageandtextarea {
  float: right;
}

@media screen and (max-width: 768px) {
  .mycontainerforimageandtextarea {
    float: left;
  }
}

/* Footer */

footer {
  bottom: 0;
  width: 100%;
  position: fixed;
}

